fixed alignment issue on voting phase

--- a/src/Components/Game.module.css
+++ b/src/Components/Game.module.css
@@ -1,7 +1,3 @@
-html {
-    text-shadow: 0.2em #000;
-}
-
 .Countdown {
     font-size: 1.5em;
     text-align: center;
@@ -108,7 +104,7 @@ html {
     padding: 0.5em;
     background-color: #d4e5ff;
     color: #245497;
-    border-radius: 15px;
+    border-radius: 0.5em;
     font-size: 1.25em;
 }
 
@@ -152,7 +148,6 @@ html {
     border: 1px solid rgb(145, 145, 145);
     backdrop-filter: blur(0.5em) brightness(0.75);
 }
-
 
 #rapDisplay>div {
     font-size: 2em;
@@ -200,6 +195,12 @@ html {
 }
 
 /* Round results */
+
+#roundResults {
+    background-color: rgb(150, 206, 255);
+    border-radius: 0.5em;
+    padding-bottom: 1em;
+}
 
 #rapperList {
     margin: auto;
